# identify-captcha

./: .gitignore  README.md  pyproject.toml  requirements.txt
model/: model.pkl
notebook/: EDA.ipynb  creating_comparison_template.ipynb
src/: captcha.py
